--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "kleur": "^4.1.5",
+    "nanospinner": "^1.2.2",
     "openai": "^4.84.0",
-    "readline": "^1.3.0",
-    "tiktoken": "^1.0.20",
     "winston": "^3.17.0"
   },
   "devDependencies": {
