feat: refactor config and add SQL query execution support
Reorganized configuration structure for better clarity, grouping AI, logs, and database settings into separate objects. Added functionality to execute generated SQL queries directly on a connected database and return results. Updated dependencies and documentation to reflect these changes.

--- a/.env-example
+++ b/.env-example
@@ -5,3 +5,8 @@ MODEL_PATH=./model.sql
 LOG_LEVEL=debug
 LOG_FILE=true
 DIALECT=postgres
+DB_HOST=
+DB_PORT=
+DB_USERNAME=
+DB_PASSWORD=
+DB_DATABASE=
