--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "kleur": "^4.1.5",
     "nanospinner": "^1.2.2",
     "openai": "^4.84.0",
+    "pg": "^8.13.3",
+    "sequelize": "^6.37.5",
+    "sequelize-typescript": "^2.1.6",
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "@types/node": "^18.16.3",
+    "@types/sequelize": "^4.28.20",
+    "@types/node": "^22.13.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
